--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "tesseract.js": "^2.1.5",
+    "tesseract.js-core": "^2.2.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
